[gd_scene load_steps=9 format=3 uid="uid://dsr8i77rancp4"]

[ext_resource type="Script" path="res://Main/menu.gd" id="1_oou5l"]
[ext_resource type="PackedScene" uid="uid://dy1snwty7qm8v" path="res://Prefabs/audio_settings.tscn" id="2_d8q1m"]
[ext_resource type="Texture2D" uid="uid://dotqa0lprd0k2" path="res://Scripts/UI/bottom_panel.png" id="3_ca004"]
[ext_resource type="Texture2D" uid="uid://ccuvd0w87e1lb" path="res://Entities/Wizard/wizard.png" id="4_snhrp"]

[sub_resource type="AtlasTexture" id="AtlasTexture_wh2k5"]
atlas = ExtResource("4_snhrp")
region = Rect2(84, 15, 7, 17)

[sub_resource type="Animation" id="Animation_qlrh1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect2:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextureRect2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(573, 175)]
}

[sub_resource type="Animation" id="Animation_1rtm6"]
resource_name = "wand"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect2:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-0.174533, 0.174533]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextureRect2:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.466667, 1.46667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(573, 170), Vector2(573, 175)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_oh73r"]
_data = {
"RESET": SubResource("Animation_qlrh1"),
"wand": SubResource("Animation_1rtm6")
}

[node name="Menu" type="Node2D"]
script = ExtResource("1_oou5l")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0941176, 0.0784314, 0.145098, 1)

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = -148.0
offset_right = 576.0
offset_bottom = 148.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_ca004")

[node name="Label" type="Label" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -421.5
offset_top = 122.0
offset_right = 421.5
offset_bottom = 170.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 42
text = "That time I was reincarnated as a Magic Wand"

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -114.0
offset_top = -43.0
offset_right = 114.0
offset_bottom = 43.0
grow_horizontal = 2
grow_vertical = 2

[node name="Play" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="Options" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="Credits" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Credits"

[node name="Quit" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="Credits" type="Label" parent="CanvasLayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -170.0
offset_top = -82.5
offset_right = 170.0
offset_bottom = 82.5
grow_horizontal = 2
grow_vertical = 2
text = "Programming:
Hullahopp, MrButier, NathanTheCraziest

Art:
NathanTheCraziest

Music and Sound Effects:
Creeno,  Lemonz"
horizontal_alignment = 1

[node name="Button" type="Button" parent="CanvasLayer/Credits"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -82.0
offset_top = 10.0
offset_right = 82.0
offset_bottom = 36.0
grow_horizontal = 2
grow_vertical = 0
text = "Back"

[node name="Control" parent="CanvasLayer" instance=ExtResource("2_d8q1m")]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -78.0
offset_right = 100.0
offset_bottom = 78.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="CanvasLayer/Control"]
layout_mode = 2
text = "Back"

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer"]
offset_left = 573.0
offset_top = 175.0
offset_right = 580.0
offset_bottom = 192.0
scale = Vector2(4, 4)
pivot_offset = Vector2(3.5, 8.5)
texture = SubResource("AtlasTexture_wh2k5")

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer"]
libraries = {
"": SubResource("AnimationLibrary_oh73r")
}
autoplay = "wand"

[connection signal="button_down" from="CanvasLayer/VBoxContainer/Play" to="." method="_on_play_button_down"]
[connection signal="button_down" from="CanvasLayer/VBoxContainer/Options" to="." method="_on_options_button_down"]
[connection signal="button_down" from="CanvasLayer/VBoxContainer/Credits" to="." method="_on_credits_button_down"]
[connection signal="button_down" from="CanvasLayer/VBoxContainer/Quit" to="." method="_on_quit_button_down"]
[connection signal="button_down" from="CanvasLayer/Credits/Button" to="." method="_on_credit_back_button_down"]
[connection signal="button_down" from="CanvasLayer/Control/Button" to="." method="_on_options_back_button_down"]
